# satorl

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
satorl/: analysis.py  metadata.py
satorl/api/: __init__.py  app.py
satorl/cli/: main.py
satorl/cli/commands/: analyze.py  generate.py
satorl/generators/: __init__.py  base.py  gaussian.py
satorl/storage/: __init__.py  base.py  local.py  s3.py
tests/: conftest.py  test_analysis.py  test_api.py  test_cli.py  test_generators.py  test_metadata.py  test_storage.py
