# pyproject.toml for satorl
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satorl"
version = "0.1.0"
description = "Synthetic data generator CLI for uploading to S3"
authors = [{name = "Dylan Chima-Sanchez"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "typer>=0.12",
    "boto3>=1.34",
]

[project.urls]
Homepage = "https://github.com/betochimas/satorl"

# CLI entry point
[project.scripts]
satorl = "satorl.cli.main:app"