# pyproject.toml for satorl
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satorl"
version = "0.1.0"
description = "Synthetic data generator CLI for uploading to S3"
authors = [{name = "Dylan Chima-Sanchez"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "typer>=0.12",
    "boto3>=1.34",
]

[project.urls]
Homepage = "https://github.com/betochimas/satorl"

# CLI entry point
[project.scripts]
satorl = "satorl.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "moto[s3]>=5",     # in-process AWS mock — no creds, no network
    "ruff>=0.6",       # optional: lint/format, reused by the same gate
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",  # FastAPI needs this for multipart file uploads
    "scikit-learn>=1.4",        # t-SNE
    "umap-learn>=0.5",
    "httpx>=0.27",              # FastAPI TestClient (api tests)
]

# Only package the satorl tree — keeps stray top-level dirs (temp/, tests/, docs/)
# from being picked up by setuptools' flat-layout auto-discovery.
[tool.setuptools.packages.find]
include = ["satorl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=satorl --cov-report=term-missing"
# add later, once coverage stabilizes:  --cov-fail-under=80
